# libdocset

./: .travis.yml  CMakeLists.txt  README.md
src/: Docset  DocsetGroup  DocsetObject  LibDocset  docset.cpp  docset.h  docset_p.hpp  docsetgroup.cpp  docsetgroup.h  docsetobject.cpp  docsetobject.h  docsetobject_p.hpp  docsetsort.hpp  libdocset.h
tests/: CMakeLists.txt  docs.cpp  find.cpp
